welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
		if(nums(n) + 5 = nums(n + 1) && nums(n) - 1 == nums(n + 2)){
                           ^